--- a/src/components/editor_preview/free_container/style/index.scss
+++ b/src/components/editor_preview/free_container/style/index.scss
@@ -3,6 +3,7 @@
   position: static !important;
   .free-preview-list {
     height: 100%;
+    width: 100%;
   }
   .vdr {
     border: 1px dashed #4af;
@@ -17,9 +18,11 @@
     width: 100%;
     height: 100%;
   }
-  // .free-preview-list {
-  //   .component-list-box {
-  //     width: 100% !important;
-  //   }
-  // }
+  .free-preview-list {
+    .component-list-box {
+      width: 100% !important;
+      height: 100% !important;
+      background: red;
+    }
+  }
 }
