--- a/src/views/editor/style/index.css
+++ b/src/views/editor/style/index.css
@@ -74,18 +74,18 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.04);
   border-radius: 4px;
   margin: 10px auto 0;
-  overflow: hidden;
 }
 
 .editor .preview .preview-main {
   height: 100%;
   width: 100%;
-  overflow-y: auto;
+  position: relative;
 }
 
 .editor .preview .preview-list {
-  min-height: 100%;
+  min-height: 667px;
   list-style: none;
+  position: relative;
 }
 
 .editor .preview .preview-list .preview-list-box {
@@ -99,6 +99,28 @@
 
 .editor .preview .transition-group {
   min-height: 667px;
+}
+
+.editor .components-handle {
+  position: absolute;
+  right: -26px;
+  top: 0;
+  z-index: 99;
+  width: 26px;
+}
+
+.editor .components-handle .hendle-item {
+  background: rgba(0, 0, 0, 0.3);
+  text-align: center;
+  color: #fff;
+  line-height: 26px;
+  height: 26px;
+  display: block;
+  cursor: pointer;
+}
+
+.editor .components-handle .hendle-item:hover {
+  background: rgba(0, 0, 0, 0.4);
 }
 
 .editor .ghostClass {
