--- a/src/views/editor/style/index.scss
+++ b/src/views/editor/style/index.scss
@@ -60,15 +60,16 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
     border-radius: 4px;
     margin: 10px auto 0;
-    overflow: hidden;
+    // overflow: hidden;
     .preview-main {
       height: 100%;
       width: 100%;
-      overflow-y: auto;
+      position: relative;
     }
     .preview-list {
-      min-height: 100%;
+      min-height: 667px;
       list-style: none;
+      position: relative;
       .preview-list-box {
         cursor: move;
         position: relative;
@@ -86,6 +87,26 @@
     }
     .transition-group{
       min-height: 667px;
+    }
+  }
+
+  .components-handle {
+    position: absolute;
+    right: -26px;
+    top: 0;
+    z-index: 99;
+    width: 26px;
+    .hendle-item {
+      background: rgba(0,0,0,.3);
+      text-align: center;
+      color: #fff;
+      line-height: 26px;
+      height: 26px;
+      display: block;
+      cursor: pointer;
+      &:hover {
+        background: rgba(0,0,0,.4);
+      }
     }
   }
 
