自动生成自由容器

--- a/src/components/editor_preview/free_container/style/index.scss
+++ b/src/components/editor_preview/free_container/style/index.scss
@@ -20,9 +20,9 @@
   }
   .free-preview-list {
     .component-list-box {
-      width: 100% !important;
-      height: 100% !important;
-      background: red;
+      // width: 100% !important;
+      // height: 100% !important;
+      // background: red;
     }
   }
 }
