--- a/src/views/editor/style/index.css
+++ b/src/views/editor/style/index.css
@@ -68,22 +68,22 @@
 }
 
 .editor .preview {
-  width: 375px;
-  height: 667px;
+  width: 377px;
+  height: 617px;
   background: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.04);
   border-radius: 4px;
-  margin: 10px auto 0;
+  margin: 10px auto 100px;
 }
 
 .editor .preview .preview-main {
-  height: 100%;
+  height: 617px;
   width: 100%;
   position: relative;
 }
 
 .editor .preview .preview-list {
-  min-height: 667px;
+  min-height: 617px;
   list-style: none;
   position: relative;
 }
@@ -97,8 +97,56 @@
   border: 1px solid #409EFF;
 }
 
+.editor .preview .preview-list .preview-list-box > .vdr {
+  border: 0 !important;
+}
+
 .editor .preview .transition-group {
-  min-height: 667px;
+  min-height: 617px;
+}
+
+.editor .preview .preview-navbar {
+  height: 50px;
+}
+
+.editor .preview .preview-navbar-graggable {
+  height: 50px;
+  position: relative;
+}
+
+.editor .preview .preview-navbar-graggable .navbar-list-box {
+  height: 100%;
+}
+
+.editor .preview .preview-navbar-graggable .navbar-list-box.isSelect {
+  border: 1px solid #409EFF;
+}
+
+.editor .preview .preview-navbar-graggable .component-list-box {
+  height: 50px;
+  overflow: hidden;
+}
+
+.editor .preview .preview-navbar-graggable .component-list-box .component-name {
+  display: none;
+}
+
+.editor .preview .preview-navbar-graggable .component-list-box .icon-box {
+  height: 50px;
+  line-height: 50px;
+}
+
+.editor .preview .preview-navbar-graggable .navbar-drag-tips {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background: #ddd;
+  line-height: 50px;
+  text-align: center;
+  color: 666;
 }
 
 .editor .components-handle {
