--- a/src/components/editor_settings/navbar/style/index.css
+++ b/src/components/editor_settings/navbar/style/index.css
@@ -1,38 +1,27 @@
-.navbar-setting .uploader {
-  text-align: center;
-}
-
-.navbar-setting .uploader .el-upload {
-  border: 1px dashed #d9d9d9;
-  border-radius: 6px;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-}
-
-.navbar-setting .uploader .el-upload:hover {
-  border-color: #409EFF;
-}
-
-.navbar-setting .uploader .uploader-icon {
-  font-size: 28px;
-  color: #8c939d;
-  width: 148px;
-  height: 148px;
-  line-height: 148px;
-  text-align: center;
-}
-
-.navbar-setting .uploader .uploader-img {
-  width: 148px;
-  height: 148px;
-  display: block;
-}
-
 .navbar-setting .btn-box {
   margin-top: 20px;
 }
 
 .navbar-setting .btn-box .add-btn {
   width: 100%;
+}
+
+.navbar-setting .icon-selector {
+  margin: 5px auto;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 4px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.navbar-setting .icon-selector:hover {
+  background: #f1f1f1;
+}
+
+.navbar-setting .icon-selector .iconfont {
+  font-size: 30px;
+  line-height: 32px;
 }
