--- a/src/components/editor_settings/navbar/style/index.scss
+++ b/src/components/editor_settings/navbar/style/index.scss
@@ -1,34 +1,25 @@
 .navbar-setting {
-  .uploader {
-    text-align: center;
-    .el-upload {
-      border: 1px dashed #d9d9d9;
-      border-radius: 6px;
-      cursor: pointer;
-      position: relative;
-      overflow: hidden;
-      &:hover {
-        border-color: #409EFF;
-      }
-    }
-    .uploader-icon {
-      font-size: 28px;
-      color: #8c939d;
-      width: 148px;
-      height: 148px;
-      line-height: 148px;
-      text-align: center;
-    }
-    .uploader-img {
-      width: 148px;
-      height: 148px;
-      display: block;
-    }
-  }
   .btn-box {
     margin-top: 20px;
     .add-btn {
       width: 100%;
+    }
+  }
+  .icon-selector {
+    margin: 5px auto;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 4px;
+    text-align: center;
+    cursor: pointer;
+    &:hover {
+      background: #f1f1f1;
+    }
+    .iconfont {
+      font-size: 30px;
+      line-height: 32px;
     }
   }
 }
