走马灯-图片选择器i

--- a/src/components/editor_settings/free_image/style/index.css
+++ b/src/components/editor_settings/free_image/style/index.css
@@ -1,9 +1,3 @@
-.free-image-setting .image-selector {
-  width: 110px;
-  height: 110px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 4px;
-  margin: 0 auto 10px;
-  cursor: pointer;
+.free-image-setting {
+  padding: 0;
 }
