--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -37,3 +37,14 @@ body {
     clear: both;
   }
 }
+
+
+.image-selector {
+  width: 110px;
+  height: 110px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 4px;
+  margin: 0 auto 10px;
+  cursor: pointer;
+}
