--- a/src/components/editor_preview/free_container/style/index.css
+++ b/src/components/editor_preview/free_container/style/index.css
@@ -19,6 +19,16 @@
   background: #4af;
 }
 
+.free-container .vdr .handle-bm, .free-container .vdr .handle-tm {
+  left: calc(50% - 4px);
+  margin-left: 0;
+}
+
+.free-container .vdr .handle-ml, .free-container .vdr .handle-mr {
+  top: calc(50% - 4px);
+  margin-top: 0;
+}
+
 .free-container .component-wrap {
   width: 100%;
   height: 100%;
