--- a/src/components/editor_preview/free_container/style/index.scss
+++ b/src/components/editor_preview/free_container/style/index.scss
@@ -7,6 +7,9 @@
     &>.vdr {
       border: 0 !important;
     }
+    .component-list-box {
+      display: none !important;
+    }
   }
   .vdr {
     // border: 1px dashed #4af;
