--- a/src/components/common/icon_selector/style/index.css
+++ b/src/components/common/icon_selector/style/index.css
@@ -14,7 +14,29 @@
 }
 
 .icon-selector-dialog .icon-wrap.isSelect {
+  position: relative;
   border-color: #409EFF;
+  font-size: 14px;
+  color: #409EFF;
+  font-family: element-icons !important;
+  speak: none;
+  font-style: normal;
+  font-weight: 400;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  vertical-align: baseline;
+  display: inline-block;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-selector-dialog .icon-wrap.isSelect::after {
+  content: "\e79c";
+  display: inline-block;
+  position: absolute;
+  right: 3px;
+  top: 3px;
 }
 
 .icon-selector-dialog .icon-wrap .iconfont {
