--- a/src/components/common/icon_selector/style/index.scss
+++ b/src/components/common/icon_selector/style/index.scss
@@ -12,7 +12,28 @@
       background: #f1f1f1;
     }
     &.isSelect {
+      position: relative;
       border-color: #409EFF;
+      font-size: 14px;
+      color: #409EFF;
+      font-family: element-icons!important;
+      speak: none;
+      font-style: normal;
+      font-weight: 400;
+      font-variant: normal;
+      text-transform: none;
+      line-height: 1;
+      vertical-align: baseline;
+      display: inline-block;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      &::after {
+        content: "\e79c";
+        display: inline-block;
+        position: absolute;
+        right: 3px;
+        top: 3px;
+      }
     }
     .iconfont {
       font-size: 30px;
