--- a/src/components/common/image_selector/style/index.scss
+++ b/src/components/common/image_selector/style/index.scss
@@ -13,7 +13,28 @@
         border-color: #409EFF;
       }
       &.isSelect {
+        position: relative;
         border-color: #409EFF;
+        font-size: 18px;
+        color: #409EFF;
+        font-family: element-icons!important;
+        speak: none;
+        font-style: normal;
+        font-weight: 400;
+        font-variant: normal;
+        text-transform: none;
+        line-height: 1;
+        vertical-align: baseline;
+        display: inline-block;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        &::after {
+          content: "\e79c";
+          display: inline-block;
+          position: absolute;
+          right: 3px;
+          top: 3px;
+        }
       }
     }
     .el-upload {
