--- a/src/views/editor/style/index.scss
+++ b/src/views/editor/style/index.scss
@@ -89,6 +89,7 @@
       .preview-list-box {
         cursor: move;
         position: relative;
+        border-bottom: 1px dashed #d6d6d6;
         &.isSelect {
           // content: '';
           // position: absolute;
