--- a/src/components/editor_preview/free_container/style/index.scss
+++ b/src/components/editor_preview/free_container/style/index.scss
@@ -1,6 +1,10 @@
 .free-container {
   height: 300px;
   position: static !important;
+  // border-top: 1px dashed #d6d6d6;
+  // border-bottom: 1px dashed #d6d6d6;
+  // border-left: 0;
+  // border-right: 0;
   .free-preview-list {
     height: 100%;
     width: 100%;
@@ -8,7 +12,17 @@
       border: 0 !important;
     }
     .component-list-box {
-      display: none !important;
+      // display: none !important;
+      height: 100% !important;
+      display: -webkit-flex; /* Safari */
+      -webkit-align-items: center; /* Safari 7.0+ */
+      display: flex;
+      align-items: center;
+      .drop-tips {
+        height: 100% !important;
+        width: 100%;
+        flex: 1;
+      }
     }
   }
   .vdr {
@@ -31,12 +45,5 @@
   .component-wrap {
     width: 100%;
     height: 100%;
-  }
-  .free-preview-list {
-    .component-list-box {
-      // width: 100% !important;
-      // height: 100% !important;
-      // background: red;
-    }
   }
 }
