--- a/src/views/editor/style/index.scss
+++ b/src/views/editor/style/index.scss
@@ -188,6 +188,7 @@
     top: 0;
     z-index: 99;
     width: 26px;
+    transition: 0.5s;
     .hendle-item {
       background: rgba(0,0,0,.3);
       text-align: center;
