--- a/src/components/editor_preview/free_container/style/index.scss
+++ b/src/components/editor_preview/free_container/style/index.scss
@@ -32,6 +32,7 @@
       border: 1px solid #fff;
       box-sizing: border-box;
       background: #4af;
+      z-index: 10099;
     }
     .handle-bm, .handle-tm  {
       left: calc(50% - 4px);
