--- a/src/components/editor_settings/graphic_nav/style/index.scss
+++ b/src/components/editor_settings/graphic_nav/style/index.scss
@@ -1,9 +1,8 @@
-
-
-.free-btn-setting {
-  .el-radio-group {
-    .el-radio {
-      margin-bottom: 15px;
+.navbar-setting {
+  .btn-box {
+    margin-top: 20px;
+    .add-btn {
+      width: 100%;
     }
   }
   .link-tips {
