--- a/src/assets/style/app.css
+++ b/src/assets/style/app.css
@@ -47,3 +47,23 @@ body {
   margin: 0 auto 10px;
   cursor: pointer;
 }
+
+.icon-selector {
+  margin: 5px auto;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 4px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.icon-selector:hover {
+  background: #f1f1f1;
+}
+
+.icon-selector .iconfont {
+  font-size: 30px;
+  line-height: 32px;
+}
