--- a/src/components/editor_settings/graphic_nav/style/index.css
+++ b/src/components/editor_settings/graphic_nav/style/index.css
@@ -5,3 +5,9 @@
 .navbar-setting .btn-box .add-btn {
   width: 100%;
 }
+
+.navbar-setting .link-tips {
+  font-size: 14px;
+  color: #999;
+  margin-left: 5px;
+}
