--- a/src/components/editor_settings/graphic_nav/style/index.css
+++ b/src/components/editor_settings/graphic_nav/style/index.css
@@ -1,12 +1,12 @@
-.navbar-setting .btn-box {
+.graphic-nav-setting .btn-box {
   margin-top: 20px;
 }
 
-.navbar-setting .btn-box .add-btn {
+.graphic-nav-setting .btn-box .add-btn {
   width: 100%;
 }
 
-.navbar-setting .link-tips {
+.graphic-nav-setting .link-tips {
   font-size: 14px;
   color: #999;
   margin-left: 5px;
