--- a/src/views/editor/style/index.scss
+++ b/src/views/editor/style/index.scss
@@ -23,6 +23,12 @@
   }
   .left-aside {
     border-right: 1px solid #ddd;
+    -o-user-select: none;
+    -moz-user-select: none; /*火狐 firefox*/
+    -webkit-user-select: none; /*webkit浏览器*/
+    -ms-user-select: none; /*IE10+*/
+    -khtml-user-select :none; /*早期的浏览器*/
+    user-select: none; 
   }
   .right-aside {
     border-left: 1px solid #ddd;
@@ -65,6 +71,12 @@
   }
 
   .preview-wrap-list {
+    -o-user-select: none;
+    -moz-user-select: none; /*火狐 firefox*/
+    -webkit-user-select: none; /*webkit浏览器*/
+    -ms-user-select: none; /*IE10+*/
+    -khtml-user-select :none; /*早期的浏览器*/
+    user-select: none; 
     .component-list-box {
       display: none;
     }
