--- a/src/views/editor/style/index.css
+++ b/src/views/editor/style/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .editor {
   padding: 0;
   height: 100%;
@@ -30,6 +31,16 @@
 
 .editor .left-aside {
   border-right: 1px solid #ddd;
+  -o-user-select: none;
+  -moz-user-select: none;
+  /*火狐 firefox*/
+  -webkit-user-select: none;
+  /*webkit浏览器*/
+  -ms-user-select: none;
+  /*IE10+*/
+  -khtml-user-select: none;
+  /*早期的浏览器*/
+  user-select: none;
 }
 
 .editor .right-aside {
@@ -78,6 +89,19 @@
 .editor .component-item .component-name {
   height: 35px;
   line-height: 25px;
+}
+
+.editor .preview-wrap-list {
+  -o-user-select: none;
+  -moz-user-select: none;
+  /*火狐 firefox*/
+  -webkit-user-select: none;
+  /*webkit浏览器*/
+  -ms-user-select: none;
+  /*IE10+*/
+  -khtml-user-select: none;
+  /*早期的浏览器*/
+  user-select: none;
 }
 
 .editor .preview-wrap-list .component-list-box {
