--- a/src/views/editor/style/index.css
+++ b/src/views/editor/style/index.css
@@ -15,7 +15,7 @@
   line-height: 60px;
 }
 
-.editor .el-header .json-btn-box {
+.editor .el-header .header-btn-box {
   float: right;
   height: 100%;
 }
@@ -117,14 +117,24 @@
   margin: 10px auto 100px;
 }
 
+.editor .preview .preview-header {
+  height: 40px;
+  width: 100%;
+  position: relative;
+  border-bottom: 1px solid #ddd;
+  font-size: 16px;
+  line-height: 40px;
+  text-align: center;
+}
+
 .editor .preview .preview-main {
-  height: 617px;
+  height: 577px;
   width: 100%;
   position: relative;
 }
 
 .editor .preview .preview-list {
-  min-height: 617px;
+  min-height: 577px;
   list-style: none;
   position: relative;
 }
