--- a/src/views/editor/components/page_manage/style/index.css
+++ b/src/views/editor/components/page_manage/style/index.css
@@ -1,15 +1,12 @@
 .page-manage .handle-box {
   border: 1px solid #dcdfe6;
   line-height: 32px;
-  padding: 0 10px;
+  padding: 0 0 0 10px;
+  cursor: pointer;
 }
 
 .page-manage .group-children {
   padding-left: 20px;
-}
-
-.page-manage .group-children .handle-box {
-  cursor: pointer;
 }
 
 .page-manage .handle-name,
@@ -25,6 +22,7 @@
 
 .page-manage .handle-opt {
   float: right;
+  padding-right: 10px;
 }
 
 .page-manage .handle-opt .icon {
@@ -34,6 +32,23 @@
   line-height: 32px;
 }
 
+.page-manage .handle-opt .dropdown-box {
+  display: inline-block;
+}
+
 .page-manage ul, .page-manage li {
   list-style: none;
+}
+
+.page-manage .add-btn-box {
+  margin-top: 30px;
+}
+
+.page-manage .add-btn-box .el-button {
+  display: block;
+  width: 100%;
+}
+
+.page-manage-move .dialog-body {
+  text-align: center;
 }
